--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.3",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "^0.73.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-scripts": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,7 +35,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18"
