--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,14 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "compilerOptions": {
+    "jsx": "react",
+    "baseUrl": "./",
+    "lib": ["ES6", "ES2015"],
+    "paths": {
+      "@services/*": ["services/*"]
+    },
+    "esModuleInterop": true,
+    "types": ["react-native-fs"]
+  },
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "jsx": "react-native"
 }
