LottieView in Home and FontAwesome5 added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@services/*": ["services/*"]
     },
     "esModuleInterop": true,
-    "types": ["react-native-fs"]
+    "types": ["react-native-fs"],
+    "resolveJsonModule": true // Add this line to enable JSON module resolution
   },
   "extends": "@tsconfig/react-native/tsconfig.json",
   "jsx": "react-native"
