--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-scripts": "^2.0.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "use-between": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
