--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.3",
     "lottie-react-native": "^6.4.1",
+    "openmeteo": "^1.1.3",
     "react": "18.2.0",
     "react-native": "^0.73.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
+    "text-encoding": "^0.7.0",
+    "url-search-params-polyfill": "^8.2.5",
     "use-between": "^1.3.5"
   },
   "devDependencies": {
