--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.3",
     "lottie-react-native": "^6.4.1",
+    "npm": "^10.2.5",
     "openmeteo": "^1.1.3",
     "react": "18.2.0",
     "react-native": "^0.73.1",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-open-maps": "^0.4.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-scripts": "^2.0.1",
