--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react-native": "^6.4.1",
     "npm": "^10.2.5",
     "openmeteo": "^1.1.3",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "^0.73.1",
     "react-native-geocoding": "^0.5.0",
