--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "^0.73.1",
     "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-open-maps": "^0.4.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
