--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-community/netinfo": "^11.2.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -24,9 +26,12 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-open-maps": "^0.4.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-scripts": "^2.0.1",
+    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.3",
     "text-encoding": "^0.7.0",
     "url-search-params-polyfill": "^8.2.5",
