--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "^0.73.1",
     "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-mmkv": "^2.11.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-restart": "^0.0.27",
