--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "openmeteo": "^1.1.3",
     "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-native": "^0.73.1",
     "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-mmkv": "^2.11.0",
     "react-native-open-maps": "^0.4.3",
@@ -31,7 +31,6 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-scripts": "^2.0.1",
-    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.3",
     "text-encoding": "^0.7.0",
     "url-search-params-polyfill": "^8.2.5",
@@ -39,7 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
@@ -50,9 +50,13 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-native": "^0.73.2",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "engines": {
