--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "npm": "^10.2.5",
     "openmeteo": "^1.1.3",
     "punycode": "^2.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-google-places-autocomplete": "^2.5.6",
@@ -45,7 +45,7 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.48",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
