--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-mmkv": "^2.11.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-restart": "^0.0.27",
